--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Transmisión GPS y orientacional desde un movil Android hacia la PC mediante sockets en Java
+Transmisión GPS y orientacional desde un móvil Android hacia la PC mediante sockets en Java
